feat: literal variants for (pretty much) all types (#4947)
## Changes Made

Implements the full mapping between literals and series, with the
exception of:
- Unknown type, which has no series equivalent
- Extension type, since the arrow2 Scalar type is not serializable

Moved some of the code from daft-image to daft-core so that I could do
conversions between image literals and series.

## Related Issues

none

## Checklist

- [x] Documented in API Docs (if applicable)
- [x] Documented in User Guide (if applicable)
- [x] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [x] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

---------

Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -233,6 +233,7 @@ common-daft-config = {path = "src/common/daft-config"}
 common-display = {path = "src/common/display", default-features = false}
 common-error = {path = "src/common/error", default-features = false}
 common-file-formats = {path = "src/common/file-formats"}
+common-image = {path = "src/common/image"}
 common-metrics = {path = "src/common/metrics"}
 common-runtime = {path = "src/common/runtime", default-features = false}
 daft-algebra = {path = "src/daft-algebra"}
@@ -264,6 +265,7 @@ derive_builder = "0.20.2"
 educe = "0.6.0"
 futures = "0.3.30"
 html-escape = "0.2.13"
+image = {version = "0.25.5", default-features = false}
 indexmap = "2.9.0"
 indicatif = "0.18"
 itertools = "0.14"
