--- a/src/common/image/Cargo.toml
+++ b/src/common/image/Cargo.toml
@@ -2,6 +2,7 @@
 arrow2 = {workspace = true}
 bincode = {workspace = true}
 common-error = {path = "../error", default-features = false}
+common-ndarray = {workspace = true}
 daft-schema = {path = "../../daft-schema", default-features = false}
 image = {workspace = true, features = [
   "gif",
@@ -13,6 +14,7 @@ image = {workspace = true, features = [
   "bmp",
   "hdr"
 ]}
+ndarray = {workspace = true}
 serde = {workspace = true}
 
 [lints]
