--- a/src/daft-core/Cargo.toml
+++ b/src/daft-core/Cargo.toml
@@ -21,6 +21,7 @@ comfy-table = {workspace = true}
 common-arrow-ffi = {path = "../common/arrow-ffi", default-features = false}
 common-display = {path = "../common/display", default-features = false}
 common-error = {path = "../common/error", default-features = false}
+common-file = {path = "../common/file", default-features = false}
 common-hashable-float-wrapper = {path = "../common/hashable-float-wrapper"}
 common-image = {workspace = true}
 common-io-config = {path = "../common/io-config", default-features = false}
@@ -68,6 +69,7 @@ python = [
   "common-arrow-ffi/python",
   "common-display/python",
   "common-error/python",
+  "common-file/python",
   "common-io-config/python",
   "common-ndarray/python",
   "common-py-serde/python",
