--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,29 +70,19 @@ dev = [
   "maturin",
   "pre-commit",
   "docker",
+  # Pinned aiohttp due to Ray connection issue in aiohttp==3.12.6
+  "aiohttp==3.12.4",
+  # Pinned requests due to docker-py issue: https://github.com/docker/docker-py/issues/3256
+  "requests<2.32.0",
+  # Pinned httpx due to unitycatalog-python issue: https://github.com/unitycatalog/unitycatalog-python/issues/9
+  "httpx==0.27.2",
   "pydantic==2.10.6",
   "tenacity==8.2.3",
-  # tracing
+  # Tracing
   "orjson==3.10.12",
   "py-spy>=0.3.14",
   "viztracer==0.15.6",
-  # storage
-  "databricks-sdk==0.12.0",
-  "s3fs==2023.12.0",
-  "boto3-stubs[essential,glue,s3,s3tables]>=1.39.0",
-  "moto[glue,s3,s3tables,server]>=5.1.9",
-  "adlfs==2024.7.0",
-  "azure-storage-blob==12.24.0",
-  "gcsfs==2023.12.0",
-  # sql
-  "trino[sqlalchemy]==0.328.0",
-  "PyMySQL==1.1.0",
-  "psycopg2-binary==2.9.10",
-  "pyodbc==5.1.0",
-  # ai
-  "vllm; platform_system == 'Linux' and platform_machine == 'x86_64'",
-  "openai",
-  # test frameworks
+  # Testing frameworks
   "hypothesis==6.79.2",
   "pytest==7.4.3",
   "pytest-benchmark==4.0.0",
@@ -100,20 +90,44 @@ dev = [
   "pytest-lazy-fixture==0.6.3",
   "memray==1.17.2; platform_system != 'Windows'",
   "pytest-codspeed==2.2.1",
-  # test dependencies
+  # Testing dependencies
   "lxml==5.3.0",
-  "dask[dataframe]==2024.4.0",
+  "dask[dataframe]==2024.4.1",
+  "numpy==1.26.2",
+  "pandas==2.1.3",
   "pandas-stubs==2.2.2.240807",
   "xxhash>=3.0.0",
   "Pillow==10.4.0",
   "opencv-python==4.10.0.84",
   "tiktoken==0.9.0",
   "duckdb==1.1.2",
-  "pyarrow==19.0.1",
+  # TQDM
+  "tqdm",
+  # Pyarrow
+  "pyarrow==20.0.0",
   "pyarrow-stubs==19.4",
-  "pyiceberg==0.7.0",
-  "ray[data]==2.34.0",
-  "ray[client]==2.34.0"
+  # Databricks
+  "databricks-sdk==0.12.0",
+  # SQL
+  "trino[sqlalchemy]==0.328.0",
+  "PyMySQL==1.1.0",
+  "psycopg2-binary==2.9.10",
+  "pyodbc==5.1.0",
+  # AWS
+  "s3fs==2023.12.0",
+  # on old versions of s3fs's pinned botocore, they neglected to pin urllib3<2 which leads to:
+  # "ImportError: cannot import name 'DEFAULT_CIPHERS' from 'urllib3.util.ssl_'"
+  "boto3==1.36.20",
+  "boto3-stubs[essential,glue,s3,s3tables]==1.38.46",
+  "moto[glue,s3,s3tables,server]==5.1.1",
+  # Azure
+  "adlfs==2024.7.0",
+  "azure-storage-blob==12.24.0",
+  # GCS
+  "gcsfs==2023.12.0",
+  # ai
+  "vllm; platform_system == 'Linux' and platform_machine == 'x86_64'",  # for other systems, see install instructions: https://docs.vllm.ai/en/latest/getting_started/installation.html
+  "openai"
 ]
 docs = [
   "markdown-exec",
