--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -45,8 +45,8 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
-          uv pip install -e ./docs/plugins/
           uv sync --no-install-project --all-extras --all-groups
+          uv pip install -e docs/plugins/nav_hide_children
     - name: Build Daft in development mode and generate docs
       run: |
         source activate
