--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -3,8 +3,39 @@ name: PR test suite
 on:
   push:
     branches: [main]
+    paths-ignore:
+    - '.vscode/**'
+    - 'ci/**'
+    - 'docs/**'
+    - '.git-blame-ignore-revs'
+    - '.gitignore'
+    - '.lldbinit'
+    - '.readthedocs.yaml'
+    - 'CODE_OF_CONDUCT.md'
+    - 'CONTRIBUTING.md'
+    - 'LICENSE'
+    - 'README.rst'
+    - 'SECURITY.md'
+    - 'codecov.yml'
+    - 'mkdocs.yml'
+
   pull_request:
     branches: [main]
+    paths-ignore:
+    - '.vscode/**'
+    - 'ci/**'
+    - 'docs/**'
+    - '.git-blame-ignore-revs'
+    - '.gitignore'
+    - '.lldbinit'
+    - '.readthedocs.yaml'
+    - 'CODE_OF_CONDUCT.md'
+    - 'CONTRIBUTING.md'
+    - 'LICENSE'
+    - 'README.rst'
+    - 'SECURITY.md'
+    - 'codecov.yml'
+    - 'mkdocs.yml'
   # `workflow_dispatch` allows CodSpeed to trigger backtest
   # performance analysis in order to generate initial data.
   workflow_dispatch:
