--- a/src/common/file/Cargo.toml
+++ b/src/common/file/Cargo.toml
@@ -1,9 +1,11 @@
 [dependencies]
 common-error = {path = "../error", default-features = false}
+common-io-config = { version = "0.3.0-dev0", path = "../io-config" }
 serde = {workspace = true}
+pyo3 = { workspace = true, optional = true }
 
 [features]
-python = ["common-error/python"]
+python = ["common-error/python", "dep:pyo3"]
 
 [lints]
 workspace = true
