--- a/src/daft-file/Cargo.toml
+++ b/src/daft-file/Cargo.toml
@@ -1,12 +1,21 @@
 [dependencies]
+bytes.workspace = true
 common-error = {path = "../common/error", default-features = false}
-daft-io = {path = "../daft-io", default-features = false}
+common-runtime.workspace = true
+daft-io = { path = "../daft-io", default-features = false }
+daft-core = { path = "../daft-core", default-features = false }
+daft-dsl = { path = "../daft-dsl", default-features = false }
+futures.workspace = true
 pyo3 = {workspace = true, optional = true}
-
+tokio.workspace = true
+serde.workspace = true
+typetag.workspace = true
 [features]
 python = [
   "common-error/python",
+  "daft-dsl/python",
   "daft-io/python",
+  "daft-core/python",
   "dep:pyo3"
 ]
 
