--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -33,6 +33,7 @@ uuid.workspace = true
 daft-dsl = {path = "../daft-dsl", features = ["test-utils"]}
 daft-functions-binary = {path = "../daft-functions-binary", default-features = false}
 daft-functions-utf8 = {path = "../daft-functions-utf8", default-features = false}
+indoc = "2"
 pretty_assertions = {workspace = true}
 rand = "0.8"
 rstest = {workspace = true}
