--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -107,31 +107,13 @@ jobs:
         command: |
           # Install pytest and the wheel
           # Note: We only test x86_64 wheels due to GitHub Actions runner limitations.
-          # Let pip choose the appropriate wheel for the current platform
-          uv pip install pytest dist/${{ env.package-name }}-*.whl --force-reinstall
+          # Pattern matches both daft-*.whl and daft_lts-*.whl (LTS builds)
+          uv pip install pytest dist/*.whl --force-reinstall
           # Remove source code to ensure we're testing the wheel
           rm -rf daft
     - name: Run dataframe tests
       run: |
-        pytest tests/dataframe/ --durations=50
-    - name: Send Slack notification on failure
-      uses: slackapi/slack-github-action@v2.0.0
-      if: ${{ failure() }}
-      with:
-        payload: |
-          {
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": ":rotating_light: Dev S3 Wheel Tests <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED* :rotating_light:"
-                }
-              }
-            ]
-          }
-        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-        webhook-type: incoming-webhook
+        uv run pytest tests/dataframe/ --durations=50
 
   publish:
     name: Publish wheels to S3
