consolidate test in build

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -24,6 +24,7 @@ jobs:
       arch: ${{ matrix.arch }}
       lts: ${{ matrix.lts }}
       build_type: release
+      run_tests: true
     strategy:
       fail-fast: false
       matrix:
@@ -37,50 +38,6 @@ jobs:
         - lts: true
           arch: aarch64
 
-  test-wheels:
-    name: Test built wheels
-    runs-on: ${{ matrix.os }}
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        runner: [native, ray]
-        arch: [x86_64]
-        python-version: ['3.9', '3.11']
-    env:
-      package-name: daft
-    steps:
-    - uses: actions/checkout@v4
-    - name: Download built wheels
-      uses: actions/download-artifact@v4
-      with:
-        pattern: wheels-*
-        merge-multiple: true
-        path: dist
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Setup Virtual Env
-      run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-    - name: Install wheel and test dependencies
-      uses: nick-fields/retry@v3
-      with:
-        timeout_minutes: 10
-        max_attempts: 3
-        retry_wait_seconds: 10
-        command: |
-          source venv/bin/activate
-          pip install ray pytest pandas dist/*${{ matrix.arch }}*.whl --force-reinstall
-          rm -rf daft
-    - name: Run dataframe tests
-      run: |
-        source venv/bin/activate
-        DAFT_RUNNER=${{ matrix.runner }} pytest tests/dataframe --durations=50
-
   publish:
     name: Publish wheels to PyPI
     runs-on: ubuntu-latest
@@ -88,7 +45,7 @@ jobs:
       name: pypi
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing. It is also tied to the name of the workflow file, so do not change the file name without changing the OIDC config.
-    needs: test-wheels
+    needs: build
     steps:
     - uses: actions/download-artifact@v4
       with:
@@ -103,7 +60,7 @@ jobs:
   on-failure:
     name: Send Slack notification on failure
     runs-on: ubuntu-latest
-    needs: [build, test-wheels, publish]
+    needs: [build, publish]
     if: ${{ failure() }}
 
     steps:
