--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -74,6 +74,7 @@ jobs:
       lts: ${{ matrix.lts }}
       use_lto: ${{ inputs.use_lto }}
       build_type: release
+      run_tests: ${{ inputs.run_tests }}
     strategy:
       fail-fast: false
       matrix:
@@ -81,59 +82,9 @@ jobs:
         arch: [x86_64, aarch64]
         lts: [false]
 
-  test-wheels:
-    name: Test built wheels
-    runs-on: ${{ matrix.os }}
-    needs: [build, check-exists]
-    if: ${{ needs.check-exists.outputs.build_exists == 'false' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        runner: [native, ray]
-        arch: [x86_64]
-        python-version: ['3.11']
-    env:
-      package-name: daft
-    steps:
-    - uses: actions/checkout@v4
-    - name: Download built wheels
-      uses: actions/download-artifact@v4
-      with:
-        pattern: wheels-*
-        merge-multiple: true
-        path: dist
-    - name: Skip if tests not requested
-      if: ${{ inputs.run_tests == false }}
-      run: |
-        echo "Tests not requested, skipping test execution"
-        exit 0
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Setup Virtual Env
-      run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-    - name: Install wheel and test dependencies
-      uses: nick-fields/retry@v3
-      with:
-        timeout_minutes: 10
-        max_attempts: 3
-        retry_wait_seconds: 10
-        command: |
-          source venv/bin/activate
-          pip install ray pytest pandas dist/*${{ matrix.arch }}*.whl --force-reinstall
-          rm -rf daft
-    - name: Run dataframe tests
-      run: |
-        source venv/bin/activate
-        DAFT_RUNNER=${{ matrix.runner }} pytest tests/dataframe --durations=50
-
   publish:
     name: Publish wheels to S3
-    needs: [check-exists, test-wheels]
+    needs: [check-exists, build]
     if: ${{ needs.check-exists.outputs.build_exists == 'false' }}
     runs-on: ubuntu-latest
     permissions:
