--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -74,6 +74,8 @@ jobs:
           pyarrow-version: 8.0.0
         - python-version: '3.9'
           os: macos-latest
+        - python-version: '3.10'
+          os: macos-latest
         - pyarrow-version: 8.0.0
           os: macos-latest
         - python-version: '3.11'
