--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ clickhouse = ["clickhouse_connect"]
 deltalake = ["deltalake", "packaging"]
 gcp = []
 hudi = ["pyarrow >= 8.0.0"]
+huggingface = ["huggingface-hub"]
 iceberg = ["pyiceberg >= 0.7.0", "packaging"]
 lance = ["pylance"]
 numpy = ["numpy"]
