--- a/src/common/file/Cargo.toml
+++ b/src/common/file/Cargo.toml
@@ -1,6 +1,6 @@
 [dependencies]
 common-error = {path = "../error", default-features = false}
-common-io-config = {version = "0.3.0-dev0", path = "../io-config"}
+common-io-config = {path = "../io-config"}
 pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
 
