feat: daft.File object store support (#5002)
## Changes Made

adds object store support to daft.File.

⚠️ there is a small breaking change. Originally we were failing during
planning if attempting to access a local file in a distributed
environment. However, the changes introduced here makes that no longer
possible as each row can have a different source (s3, gcs, file, ...).
So unfortunately there is no longer a way to check this during planning,
and similar to `from_glob_paths` it'll return a runtime error if
attempting to access inaccessible files.



## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -409,6 +409,7 @@ missing_const_for_fn = "allow"
 missing_errors_doc = "allow"
 module_name_repetitions = "allow"
 must_use_candidate = "allow"
+mutable_key_type = "allow"
 needless_pass_by_value = "allow"
 needless_return = "allow"
 nonminimal_bool = "allow"
