--- a/src/common/file/Cargo.toml
+++ b/src/common/file/Cargo.toml
@@ -1,9 +1,11 @@
 [dependencies]
 common-error = {path = "../error", default-features = false}
+common-io-config = {path = "../io-config"}
+pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
 
 [features]
-python = ["common-error/python"]
+python = ["common-error/python", "dep:pyo3"]
 
 [lints]
 workspace = true
