Limit pyiceberg's version below 0.9.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,10 @@ azure = []
 deltalake = ["deltalake", "packaging"]
 gcp = []
 hudi = ["pyarrow >= 8.0.0"]
-iceberg = ["pyiceberg >= 0.7.0", "packaging"]
+# pyiceberg 0.9.1 has a bug https://github.com/apache/iceberg-python/issues/1979. It was not
+# triggered because we specify pyiceberg == 0.7.0 in requrements-dev.txt which hide this problem.
+# See https://github.com/Eventual-Inc/Daft/issues/4868.
+iceberg = ["pyiceberg >= 0.7.0, < 0.9.1", "packaging"]
 lance = ["pylance"]
 numpy = ["numpy"]
 pandas = ["pandas"]
