--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -86,11 +86,15 @@ jobs:
           uv sync --no-install-project --all-extras --all-groups
 
     - name: Override pyarrow
-      run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
+      run: |
+        source .venv/bin/activate
+        uv pip install pyarrow==${{ matrix.pyarrow-version }}
 
     - name: Override deltalake for pyarrow
       if: ${{ (matrix.pyarrow-version == '8.0.0') }}
-      run: uv pip install deltalake==0.10.0
+      run: |
+        source .venv/bin/activate
+        uv pip install deltalake==0.10.0
 
     # Rust code coverage does not work on ubuntu-latest, so we only run it on macOS
     # For more info: https://github.com/Eventual-Inc/Daft/issues/3801
@@ -113,7 +117,7 @@ jobs:
     - name: Build library and Test with pytest with code coverage (macOS)
       if: ${{ (runner.os == 'macOS') }}
       run: |
-        source activate
+        source .venv/bin/activate
         cargo llvm-cov clean --workspace
         maturin develop --uv
         pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
@@ -194,6 +198,7 @@ jobs:
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
       run: |
+        source .venv/bin/activate
         uv venv --seed .venv
         echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
         uv pip install -U twine toml maturin
@@ -269,6 +274,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -349,6 +355,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -440,6 +447,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -538,6 +546,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -624,6 +633,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -722,6 +732,7 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
+          source .venv/bin/activate
           uv sync --no-install-project --all-extras --all-groups
           uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
@@ -1109,6 +1120,7 @@ jobs:
       run: |
         uv venv --seed .venv
         echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+        source .venv/bin/activate
         uv pip install pre-commit
     - uses: moonrepo/setup-rust@v1
       with:
