--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -101,7 +101,7 @@ jobs:
     - name: Build library and Test with pytest (Linux)
       if: ${{ (runner.os == 'Linux') }}
       run: |
-        source activate
+        source .venv/bin/activate
         maturin develop --uv
         pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
         pytest --cov=daft --ignore tests/integration --durations=50
@@ -193,7 +193,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -221,7 +220,7 @@ jobs:
     # NOTE: we don't build with all the actual release optimizations to avoid hellish CI times
     - name: Build wheels
       run: |
-        source activate
+        source .venv/bin/activate
         maturin build --release --compatibility linux --out dist
     - name: Upload wheels
       uses: actions/upload-artifact@v4
@@ -260,7 +259,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -286,7 +284,7 @@ jobs:
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('tests/integration/test_tpch.py', 'benchmarking/tpch/**') }}
     - name: Run TPCH integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/test_tpch.py --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -341,7 +339,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -370,7 +367,7 @@ jobs:
         down-flags: --volumes
     - name: Run IO integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/io -m 'integration and not benchmark' --durations=50
         pytest tests/io -m 'integration' --durations=50
       env:
@@ -433,7 +430,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -476,7 +472,7 @@ jobs:
         down-flags: --volumes
     - name: Run IO integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/io -m 'integration and not benchmark' --credentials --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -532,7 +528,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -564,7 +559,7 @@ jobs:
         popd
     - name: Run Iceberg integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/iceberg -m 'integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -619,7 +614,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -650,7 +644,7 @@ jobs:
         popd
     - name: Run sql integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/sql -m 'integration or not integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -718,7 +712,6 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: x64
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
@@ -738,7 +731,7 @@ jobs:
           rm -rf daft
     - name: Run unity integration tests
       run: |
-        source activate
+        source .venv/bin/activate
         pytest tests/integration/unity -m 'integration or not integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -783,25 +776,22 @@ jobs:
       with:
         submodules: true
         fetch-depth: 0
-    - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
-        cache: pip
-        cache-dependency-path: |
-          pyproject.toml
-          requirements-dev.txt
     - name: Download built wheels
       uses: actions/download-artifact@v4
       with:
         pattern: wheels-*
         merge-multiple: true
         path: dist
+    - name: Setup Python and uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+        enable-cache: true
+        cache-dependency-glob: "**/pyproject.toml"
     - name: Setup Virtual Env
       run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-        pip install uv
+        uv venv --seed .venv
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
     - name: Install Daft and dev dependencies
       uses: nick-fields/retry@v3
       with:
@@ -809,10 +799,13 @@ jobs:
         max_attempts: 3
         retry_wait_seconds: 10
         command: |
-          uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+          source .venv/bin/activate
+          uv sync --no-install-project --all-extras --all-groups
+          uv pip install dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
           rm -rf daft
     - name: Run AI provider integration tests
       run: |
+        source .venv/bin/activate
         pytest -m integration tests/integration/ai --credentials --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
@@ -901,7 +894,7 @@ jobs:
         bun run build
     - name: Build Rust Library
       run: |
-        source activate
+        source .venv/bin/activate
         maturin develop --uv --profile dev-bench
     - uses: actions/cache@v4
       env:
@@ -912,7 +905,7 @@ jobs:
     - name: Run benchmarks
       uses: CodSpeedHQ/action@v3
       with:
-        run: source activate; pytest tests/benchmarks/test_local_tpch.py tests/benchmarks/test_interactive_reads.py -m benchmark --codspeed
+        run: source .venv/bin/activate; pytest tests/benchmarks/test_local_tpch.py tests/benchmarks/test_interactive_reads.py -m benchmark --codspeed
       env:
         DAFT_RUNNER: native
     - name: Send Slack notification on failure
@@ -1042,7 +1035,7 @@ jobs:
         command: uv sync --no-install-project --all-extras --all-groups
     - name: Run doctests
       run: |
-        source activate
+        source .venv/bin/activate
         maturin develop --uv
         make doctests
       env:
@@ -1214,7 +1207,7 @@ jobs:
         key: ${{ runner.os }}-python-${{ env.python-version }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
     - name: Python And Rust Style Check
       run: |
-        source activate
+        source .venv/bin/activate
         pre-commit run --all-files
 
     - name: Send Slack notification on failure
