--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -1,5 +1,6 @@
 [dependencies]
 arc-swap = {workspace = true}
+async-stream = {workspace = true}
 async-trait = {workspace = true}
 capitalize = "*"
 common-daft-config = {path = "../common/daft-config", default-features = false}
@@ -29,6 +30,7 @@ daft-parquet = {path = "../daft-parquet", default-features = false}
 daft-physical-plan = {path = "../daft-physical-plan", default-features = false}
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 daft-scan = {path = "../daft-scan", default-features = false}
+daft-shuffles = {path = "../daft-shuffles", default-features = false}
 daft-warc = {path = "../daft-warc", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
