--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -889,6 +889,8 @@ jobs:
       run: exit 1
 
   benchmark-codspeed:
+    needs: skipcheck
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     runs-on: buildjet-8vcpu-ubuntu-2204
     timeout-minutes: 30
     env:
@@ -966,6 +968,8 @@ jobs:
         webhook-type: incoming-webhook
 
   rust-tests-platform:
+    needs: skipcheck
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     runs-on: ${{ matrix.os }}-latest
     timeout-minutes: 45
     strategy:
